--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         </div>
                         <p class="text-body mb-3">Enjoy more space in our 1 Bedroom Suite, ideal for business or extended stays, with a separate lounge and modern kitchen.</p>
                         <div class="d-flex justify-content-between">
-                            <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=one-bedroom">View Details</a>
+                            <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=1bedroom">View Details</a>
                             <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/booking">Book Now</a>
                         </div>
                     </div>
@@ -441,7 +441,7 @@
                         </div>
                         <p class="text-body mb-3">The 4 Bedroom Villa is designed for families or groups, with expansive space, private garden, and fully equipped kitchen.</p>
                         <div class="d-flex justify-content-between">
-                            <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=four-bedroom">View Details</a>
+                            <a class="btn btn-sm btn-primary rounded py-2 px-4" href="room-details.html?room=4bedroom">View Details</a>
                             <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/booking">Book Now</a>
                         </div>
                     </div>
