--- a/room-details.html
+++ b/room-details.html
@@ -97,7 +97,6 @@
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu rounded-0 m-0">
                     <a href="booking" class="dropdown-item">Booking</a>
-                    <a href="team" class="dropdown-item">Our Team</a>
                     <a href="testimonial" class="dropdown-item">Testimonial</a>
                 </div>
             </div>
@@ -134,7 +133,7 @@
         <div class="container-fluid page-header mb-5 p-0" style="background-image: url(img/carousel-1.jpg);">
             <div class="container-fluid page-header-inner py-5">
                 <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Contact</h1>
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Room Details</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center text-uppercase">
                             <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -192,7 +191,7 @@
     </div>
 
     <div class="text-center mt-5">
-      <a href="/booking" class="btn btn-lg btn-dark px-5">Book This Room</a>
+      <a href="booking" class="btn btn-lg btn-dark px-5">Book This Room</a>
     </div>
   </div>
 
