--- a/room.html
+++ b/room.html
@@ -1,34 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || our rooms </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary SEO Meta Tags -->
+    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
+    <meta name="description" content="Book cozy, affordable rooms near JKIA airport in Syokimau. Polarhomes offers secure, stylish Airbnbs along the Nairobi Expressway, perfect for travelers & short stays.">
+    <meta name="keywords" content="polarhomes, airbnb near JKIA, rooms near JKIA, syokimau airbnb, Nairobi expressway accommodation, short stay Nairobi, inedesign Makumbi Park, apartments JKIA, JKIA rooms, airbnb syokimau, polarhomes syokimau, near airport nairobi, airbnb near expressway">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/rooms">
+    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
+    <meta property="og:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
+    <meta property="og:image" content="https://yourdomain.com/images/preview.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/rooms">
+    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
+    <meta name="twitter:description" content="Affordable short stay apartments and Airbnbs in Syokimau, Nairobi, near JKIA and the Expressway. Clean, secure, and well-furnished rooms for travelers.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/preview.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Polarhomes",
+      "image": "https://yourdomain.com/images/preview.jpg",
+      "description": "Polarhomes offers well-furnished, secure short-stay apartments and Airbnb rooms in Syokimau, near JKIA and the Nairobi Expressway.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Makumbi Park, Syokimau",
+        "addressLocality": "Nairobi",
+        "addressCountry": "Kenya"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -1.36202,
+        "longitude": 36.95185
+      },
+      "url": "https://yourdomain.com/rooms",
+      "telephone": "+254712345678",
+      "priceRange": "$$",
+      "amenityFeature": [
+        { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Near JKIA Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Close to Nairobi Expressway", "value": true }
+      ]
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icon Fonts -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Vendor Libraries -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet">
 
-    <!-- Customized Bootstrap Stylesheet -->
+    <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
+    <!-- Main Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
