--- a/service.html
+++ b/service.html
@@ -3,24 +3,74 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Polarhomes || our AirBnB services </title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Polarhomes | Affordable Airbnb Rooms Near JKIA & Nairobi Expressway">
+    <meta name="description" content="Book cozy, affordable Airbnb rooms in Syokimau near JKIA and Nairobi Expressway. Safe, stylish, and perfect for short stays.">
+    <meta name="keywords" content="polarhomes, Airbnb JKIA, Syokimau Airbnb, rooms near Nairobi Expressway, short stay Nairobi, Makumbi Park apartments, airbnb syokimau, affordable airbnb Nairobi, JKIA lodging, Nairobi airport stay">
+    <meta name="author" content="Polarhomes">
+
+    <!-- Open Graph / Facebook Meta Tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yourdomain.com/rooms">
+    <meta property="og:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
+    <meta property="og:description" content="Affordable, well-furnished rooms in Syokimau near JKIA airport and the Nairobi Expressway. Clean, safe, and ideal for short-term stays.">
+    <meta property="og:image" content="https://yourdomain.com/images/preview.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://yourdomain.com/rooms">
+    <meta name="twitter:title" content="Polarhomes | Cozy Airbnb Rooms Near JKIA, Nairobi">
+    <meta name="twitter:description" content="Affordable, stylish apartments and rooms in Syokimau near JKIA. Perfect for travelers and short stays.">
+    <meta name="twitter:image" content="https://yourdomain.com/images/preview.jpg">
+
+    <!-- Schema.org JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LodgingBusiness",
+      "name": "Polarhomes",
+      "image": "https://yourdomain.com/images/preview.jpg",
+      "description": "Polarhomes offers clean, safe, and affordable Airbnb rooms in Syokimau, near JKIA and Nairobi Expressway.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Makumbi Park, Syokimau",
+        "addressLocality": "Nairobi",
+        "addressCountry": "KE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": -1.36202,
+        "longitude": 36.95185
+      },
+      "url": "https://yourdomain.com/rooms",
+      "telephone": "+254712345678",
+      "priceRange": "$$",
+      "amenityFeature": [
+        { "@type": "LocationFeatureSpecification", "name": "Free Wi-Fi", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Secure Parking", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "24/7 Check-in", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Close to JKIA Airport", "value": true },
+        { "@type": "LocationFeatureSpecification", "name": "Near Nairobi Expressway", "value": true }
+      ]
+    }
+    </script>
 
     <!-- Favicon -->
-    <link href="img/logo.jpg" rel="icon">
+    <link rel="icon" href="img/logo.jpg" type="image/x-icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">  
 
-    <!-- Icon Font Stylesheet -->
+    <!-- Icon Font Stylesheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
-    <!-- Libraries Stylesheet -->
+    <!-- Libraries Stylesheets -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
@@ -28,9 +78,10 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
+    <!-- Main Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 </head>
+
 
 <body>
     <div class="container-xxl bg-white p-0">
