--- a/testimonial.html
+++ b/testimonial.html
@@ -146,9 +146,16 @@
         <h1 class="m-0 fancy-text ms-2"></h1>
     </a>
 
-    <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<button 
+  type="button" 
+  class="navbar-toggler" 
+  data-bs-toggle="collapse" 
+  data-bs-target="#navbarCollapse" 
+  aria-controls="navbarCollapse" 
+  aria-expanded="false" 
+  aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarCollapse">
         <div class="navbar-nav py-0">
@@ -235,41 +242,38 @@
                                         placeholder="Check Out" data-target="#date2" data-toggle="datetimepicker" required />
                                 </div>
                             </div>
-                            <!-- Adults -->
-                            <div class="col-md-3">
-                                <select class="form-select" name="adults" required>
-                                    <option selected disabled>Adult</option>
-                                    <option value="1">1 Person</option>
-                                    <option value="2">2 People</option>
-                                </select>
-                            </div>
-                            <!-- Children -->
-                            <div class="col-md-3">
-                                <select class="form-select" name="children">
-                                    <option selected disabled>Child</option>
-                                    <option value="0">No Child</option>
-                                    <option value="1">1 Child</option>
-                                    <option value="2">2 Children</option>
-                                </select>
-                            </div>
-                            <!-- Email -->
-                            <div class="col-md-6">
-                                <input type="email" class="form-control" name="_replyto" placeholder="Your Email" required />
-                            </div>
-                            <!-- Phone -->
-                            <div class="col-md-6">
-                                <input type="tel" class="form-control" name="phone" placeholder="Your Phone Number" required />
-                            </div>
-                            <!-- Room Type -->
-                            <div class="col-md-6">
-                                <select class="form-select" name="room_type" required>
-                                    <option selected disabled>Select Room</option>
-                                    <option value="Studio Executive suite">Studio Executive suite</option>
-                                    <option value="One Bedroom suite">One Bedroom suite</option>
-                                    <option value="Two Bedroom suite">Two Bedroom suite</option>
-                                    <option value="4 Bedroom suite">4 Bedroom Villa/Stand Alone</option>
-                                </select>
-                            </div>
+<!-- Adults -->
+<div class="col-md-3">
+    <label for="adults" class="visually-hidden">Number of Adults</label>
+    <select id="adults" class="form-select" name="adults" required>
+        <option selected disabled>Adult</option>
+        <option value="1">1 Person</option>
+        <option value="2">2 People</option>
+    </select>
+</div>
+
+<!-- Children -->
+<div class="col-md-3">
+    <label for="children" class="visually-hidden">Number of Children</label>
+    <select id="children" class="form-select" name="children">
+        <option selected disabled>Child</option>
+        <option value="0">No Child</option>
+        <option value="1">1 Child</option>
+        <option value="2">2 Children</option>
+    </select>
+</div>
+
+<!-- Room Type -->
+<div class="col-md-6">
+    <label for="room_type" class="visually-hidden">Room Type</label>
+    <select id="room_type" class="form-select" name="room_type" required>
+        <option selected disabled>Select Room</option>
+        <option value="Studio Executive suite">Studio Executive suite</option>
+        <option value="One Bedroom suite">One Bedroom suite</option>
+        <option value="Two Bedroom suite">Two Bedroom suite</option>
+        <option value="4 Bedroom suite">4 Bedroom Villa/Stand Alone</option>
+    </select>
+</div>
                             <!-- Special Request -->
                             <div class="col-md-6">
                                 <textarea class="form-control" name="message" placeholder="Special Request" rows="2"></textarea>
@@ -285,6 +289,19 @@
         </form>
     </div>
 </div>
+
+      <style>
+        .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+      </style>
 
  <!--Booking End -->
 
@@ -420,6 +437,7 @@
    class="btn btn-lg btn-success btn-lg-square whatsapp-contact" 
    target="_blank" 
    rel="noopener noreferrer" 
+   aria-label="Chat with us on WhatsApp"
    style="position: fixed; bottom: 20px; right: 20px; z-index: 9999;">
    <i class="bi bi-whatsapp" style="font-size: 1.5rem;"></i>
 </a>
@@ -442,5 +460,6 @@
 </body>
 
 </html>
+
 
 
