--- a/index.html
+++ b/index.html
@@ -724,24 +724,6 @@
     </div>
 </div>
 <!-- Testimonial End -->
-
-        <!-- Newsletter Start
-        <div class="container newsletter mt-5 wow fadeIn" data-wow-delay="0.1s">
-            <div class="row justify-content-center">
-                <div class="col-lg-10 border rounded p-1">
-                    <div class="border rounded text-center p-1">
-                        <div class="bg-white rounded text-center p-5">
-                            <h4 class="mb-4">Subscribe Our <span class="text-primary text-uppercase">Newsletter</span></h4>
-                            <div class="position-relative mx-auto" style="max-width: 400px;">
-                                <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
-                                <button type="button" class="btn btn-primary py-2 px-3 position-absolute top-0 end-0 mt-2 me-2">Submit</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
- Newsletter Start -->
         
 <!-- Footer Start -->
 <div class="container-fluid bg-dark text-light footer wow fadeIn pt-4 pb-2 mt-5" data-wow-delay="0.1s">
@@ -787,15 +769,15 @@
 
     <p class="mb-0">
         <i class="fa fa-globe me-2 text-primary"></i>
-        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">www.polarhomes.org</a>
+        <a href="https://polarhomes.org" target="_blank" class="text-decoration-none text-white">polarhomes.org</a>
     </p>
 
     <div class="d-flex pt-3">
         <a class="btn btn-outline-light btn-social me-2" href="https://www.instagram.com/polarhomes3?igsh=YzljYTk1ODg3Zg=="><i class="fab fa-instagram"></i></a>
-        <a class="btn btn-outline-light btn-social me-2" href="#"><i class="fab fa-twitter"></i></a>
+       <!-- <a class="btn btn-outline-light btn-social me-2" href="#"><i class="fab fa-twitter"></i></a>
         <a class="btn btn-outline-light btn-social me-2" href="#"><i class="fab fa-facebook-f"></i></a>
         <a class="btn btn-outline-light btn-social me-2" href="#"><i class="fab fa-youtube"></i></a>
-        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a class="btn btn-outline-light btn-social" href="#"><i class="fab fa-linkedin-in"></i></a>-->
     </div>
 </div>
 
@@ -817,7 +799,7 @@
     <div class="container border-top mt-3 pt-2">
         <div class="row align-items-center">
             <div class="col-md-6 text-center text-md-start small">
-                &copy; <a class="text-decoration-none text-light" href="#">Polar homes</a>, All Rights Reserved. 
+                &copy; <a class="text-decoration-none text-light" href="polarhomes.org">Polar homes</a>, All Rights Reserved. 
                 Designed by <a class="text-decoration-none text-primary" href="https://antocapteknologies.com">Antocap Teknologies</a>
             </div>
             <div class="col-md-6 text-center text-md-end small">
@@ -857,6 +839,7 @@
 </body>
 
 </html>
+
 
 
 
